[project]
name = "arxiv-digest-agent"
version = "0.1.0"
description = "Autonomous ArXiv AI-Agent research digest (headless daily pipeline)"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
# Runtime deps for the headless pipeline (`python -m app.runner` + publish.py).
# The interactive ADK agent and its heavier deps were archived; see archive/.
dependencies = [
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.agents-cli]
# Generation metadata - enables CLI commands to understand project context
# These fields allow any generated project to work as a remote template
name = "arxiv-digest-agent"
description = "Autonomous ArXiv AI-Agent research digest"
base_template = "adk"
agent_directory = "app"

# Generation context
generated_at = "2026-07-22T06:38:45.618023+00:00"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
# Parameters used during project creation
deployment_target = "none"
session_type = "none"
cicd_runner = "skip"
include_data_ingestion = false

datastore = "none"

agent_guidance_filename = "CLAUDE.md"
